Fixed cities so they are found when they have a gap.

--- a/src/Shared/ErrorBanner/ErrorBanner.css
+++ b/src/Shared/ErrorBanner/ErrorBanner.css
@@ -6,5 +6,13 @@
     padding:5px;
     color:black;
     background-color: red;
-    border-radius: 1rem 1rem 0 0
+    border-radius: 1rem 1rem 0 0;
+}
+
+@media only screen and (max-width: 768px) {
+    .error-banner{
+        
+    border-radius: 0;
+
+    }
 }
